@@ -1,3 +1,7 @@
+2009-01-28  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Added pages_language_overlay to modified_tables to make EM happy
+
 2009-01-01  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Added a call to pageNotFound and exit if incoming URL cannot be parsed
